<resources>
    <string name="app_name">한마음</string>

    <!-- Navigation Drawer -->
    <string name="shuttle">셔틀버스</string>
    <string name="intercity">시외버스</string>
    <string name="kobus">터미널버스</string>
    <string name="load_search">지하철길찾기</string>
    <string name="where_shuttle">셔틀타는곳</string>
    <string name="subway">지하철</string>
    <string name="notice">공지사항</string>

    <string name="navigation_text">대중교통 정보 서비스</string>
    <string name="search_hint">검색어를 입력해주세요.</string>
    <string name="search">검색</string>
    <string name="loading">검색중입니다.</string>

    <!-- Shuttle -->
    <string name="vacation">공휴일 및 방학</string>
    <string name="weekday">학기중</string>
    <string name="season">계절학기</string>
    <string name="downtownShuttle">시내셔틀</string>
    <string name="ramp_shuttle">진입로셔틀</string>
    <string name="shuttleNotice">출발시각 및 진입로 경유시간은 도로교통상황에 따라 </string>
    <string name="shuttleNotice2">5~10분정도 지연될 수 있습니다.</string>
    <string name="shuttle_number">번호</string>
    <string name="shuttle_type">종류</string>
    <string name="shuttle_start_time">출발 시간</string>
    <string name="shuttle_ramp_time">진입로 시간</string>
    <string name="shuttle_favorite">즐겨찾기</string>
    <string name="shuttle_bookmark">북마크에 등록되었습니다.</string>
    <string name="now_location">나의 현재 위치</string>
    <string name="downtown_root">버스관리사무소 정류장(기점) → 이마트 앞 → 진입로 정류장→ 동부경찰서 중앙지구대 앞 → 롯데시네마 뚜레주르 앞 → 중앙공영주차장앞 → 진입로 → 이마트 앞 → 제1공학관 → 제3공학관</string>
    <string name="ramp_root">버스관리사무소 정류장(기점) → 이마트 앞 → 진입로 정류장 → 경전철 명지대역(세브란스병원 정류장) → 진입로 정류장 →이마트 앞 → 명진당 → 제3공학관</string>

    <!-- InterCity -->
    <string name="search_data_null">검색 결과가 없습니다.</string>

    <!-- Date String -->
    <string name="attach_tag">첨부파일 :</string>

    <!-- Terminal -->
    <string name="terminal_times">터미널 시간표</string>
    <string name="seoul">서울</string>
    <string name="gwangju">광주</string>
    <string name="changwon">창원</string>
    <string name="busan">부산</string>
    <string name="westBusan">서부산</string>
    <string name="ansan">안산</string>
    <string name="jeonju">전주</string>
    <string name="youngwolTaebak">영월/태백</string>
    <string name="dongDaegu">동대구</string>
    <string name="wonju">원주</string>
    <string name="gjpohang">경주/포항</string>
    <string name="incheonYeoju">인천/여주</string>
    <string name="chungjuJeomchon">청주/점촌</string>
    <string name="sokcho">속초</string>
    <string name="gwangmyeong">광명</string>
    <string name="gunsan">군산</string>
    <string name="jinju">진주</string>
    <string name="gimhae">김해</string>
    <string name="gimpoAir">김포공항</string>
    <string name="incheonAir">인천공항</string>
    <string name="incheon">인천</string>
    <string name="daejeon">대전</string>
    <string name="cheonan">천안</string>
    <string name="cheongju">청주</string>
    <string name="sejongYuseong">세종/유성</string>
    <string name="gumiUlsan">구미/울산</string>
    <string name="gangneung">강릉</string>
    <string name="goyang">고양</string>

    <!-- SubWay -->
    <string name="subway_text">현재 지하철의 위치를 검색할 수 있습니다.</string>
    <string name="subway_search">지하철 검색</string>
    <string name="select_to_subway">지하철 노선을 선택하세요.</string>
    <string name="cancel">취소</string>

    <string name="entry">(진입)</string>
    <string name="arrival">(도착)</string>
    <string name="leave">(출발)</string>
    <string name="prev_leave">(전역출발)</string>
    <string name="prev_entry">(전역진입)</string>
    <string name="prev_arrival">(전역도착)</string>
    <string name="running">(운행중)</string>

    <string name="up_down_type">상하행선 구분 : </string>
    <string name="perminute">분 남음</string>
    <string name="final_station">종착역 : </string>

    <!-- Subway Search -->
    <string name="start_text_null">출발역을 입력하세요.</string>
    <string name="fin_text_null">도착역을 입력하세요.</string>
    <string name="all_text_null">출발역과 도착역을 입력하세요.</string>
    <string name="min_time">최소시간</string>
    <string name="min_trans">최소환승</string>
    <string name="search_error">정확한 역을 입력하세요.</string>
    <string name="next"> → </string>


    <!-- Alert -->
    <string name="not_success">네트워크가 응답하지않습니다.</string>
    <string name="on_Failure">불러오는데 실패하였습니다.</string>

    <!-- Splash -->
    <string name="splash_subject">한마음</string>
    <string name="splash_department">명지대학교 컴퓨터공학과</string>

    <!-- Weather -->
    <string name="degree">도</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Google API Key-->
    <string name="GOOGLE_API_KEY">AIzaSyBcprv_tL84aSNeTpj6h9gVokTt8CQme5U</string>
</resources>
